# clome

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  features-section.html  hero.html  package.json  project.yml  sections-oss-cta.html  vite.config.ts
.github/: architecture-section.html
.github/ISSUE_TEMPLATE/: bug_report.md  feedback.md
.github/workflows/: ci.yml  deploy-site.yml  release.yml  site-deploy.yml
Research/: coding-agent-gui-ux-research.md
Resources/: Clome.entitlements  ClomeRelease.entitlements  Info.plist  clome-claude-bridge.sh  kernel_bridge.py
Resources/Assets.xcassets/AppIcon.appiconset/: Contents.json
Resources/Assets.xcassets/StatusBarIcon.imageset/: Contents.json
Sources/CGhostty/: shims.c
Sources/CGhostty/include/: Clome-Bridging-Header.h
Sources/Clome/: main.swift
Sources/Clome/App/: ClomeAppDelegate.swift  ClomeWindow.swift  CrashReporter.swift  EmptyStateView.swift  FileAccessManager.swift  KeyboardNavigation.swift  NotificationSystem.swift  OnboardingWindowController.swift  SocketServer.swift  StatusBarController.swift
Sources/Clome/Browser/: BookmarkManager.swift  BrowserImportWizard.swift  BrowserImporter.swift  BrowserPanel.swift  CredentialStore.swift  FormAutofillManager.swift  URLAutocompletePopup.swift  WebAuthnHandler.swift
Sources/Clome/Claude/: ClaudeSession.swift  ClaudeSessionListView.swift  ClaudeSessionManager.swift
Sources/Clome/Config/: AppearanceSettings.swift  ClomeSettings.swift  LanguageSupportView.swift  SessionState.swift  SettingsWindowController.swift
Sources/Clome/Design/: ClomeMacDesign.swift  SyntaxColorScheme.swift
Sources/Clome/Editor/: AgentFileTracker.swift  CompletionPopupView.swift  DiffReviewPanel.swift  DiffView.swift  EditorPanel.swift  EditorView.swift  FileExplorerView.swift  FileTreeNode.swift  FileTypeIconProvider.swift  FileWatcher.swift  FindBarView.swift  KernelManager.swift  LSPClient.swift  LatexCompiler.swift  MinimapView.swift  MultiRootExplorerView.swift  NotebookCellView.swift  NotebookModel.swift  NotebookPanel.swift  PDFPanel.swift  ProjectPanel.swift  ProjectRoot.swift  PythonEnvironmentManager.swift  Rope.swift  TextBuffer.swift  TreeSitterHighlighter.swift  WelcomeView.swift
Sources/Clome/Flow/: ContextConfiguration.swift  FlowAuthView.swift  FlowCalendarView.swift  FlowChatStore.swift  FlowChatView.swift  FlowDashboardView.swift  FlowDeadlineView.swift  FlowDesignTokens.swift  FlowHarnessInspectorView.swift  FlowNotesView.swift  FlowPanel.swift  FlowPanelHostView.swift  FlowSyncService.swift  FlowTodoListView.swift  ToolConfiguration.swift  ToolRegistry.swift  WorkspaceColorPalette.swift  WorkspaceContextProvider.swift  WorkspaceStore.swift  WorkspaceSwitcher.swift
Sources/Clome/Launcher/: LauncherAction.swift  LauncherActionBar.swift  LauncherItem.swift  LauncherOverlayView.swift  LauncherPanelView.swift  LauncherProvider.swift  LauncherResultRowView.swift  LauncherWindow.swift  (+2 more)
blueprint/mail-client/: plan-mail-client.md  ui-ux-plan.md
blueprint/vault-graph/: plan-vault-graph.md
scripts/: build-eventkit.sh  build-release.sh  dev-build.sh  dev-env.sh.example  inject-tcc.sh  oauth-setup.md  seed-vault.js  setup-ghostty.sh
site/: CNAME  animations.js  index.html  shaders.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: clome-eventkit-aarch64-apple-darwin
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native/ClomeGhostty/: Package.swift
src-tauri/native/ClomeGhostty/Sources/CGhostty/: module.modulemap
src-tauri/native/ClomeGhostty/Sources/ClomeGhostty/: ClomeGhostty.swift
src-tauri/src/: caps.rs  db.rs  embed.rs  ghostty_native.rs  graph.rs  lib.rs  main.rs  mlx.rs  tools.rs
src-tauri/src/mail/: autoconfig.rs  commands.rs  db.rs  idle.rs  imap.rs  keychain.rs  legacy.rs  mod.rs  oauth.rs  outbox.rs  parse.rs  sanitize.rs  schema.sql  search.rs  smtp.rs  store.rs  sync.rs  threading.rs  types.rs
src/components/: AgentsModal.tsx  CaptureModal.tsx  GraphCanvas.tsx  GraphView.tsx  InspectorPane.tsx  MailApp.tsx  MailView.tsx  MarkdownContent.tsx  MentionDropdown.tsx  MessageContent.tsx  NativeTerminalHost.tsx  NoteEditor.tsx  SearchPalette.tsx  SourceBadge.tsx
src/lib/: graph.ts  markdown.ts  sources.ts  toolCards.ts  wikilinks.ts
swift/clome-eventkit/: main.swift
(+60 files in other folders)
