[package]
name = "clome"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
# Multiple bins (`Clome` + dev-only seeders) ⇒ tell `cargo run`
# which one is the app.
default-run = "Clome"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "clome_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Bin name matches productName so dev-binary lsappinfo identity matches the
# bundled-app name. request_access("Clome") works for both dev and release.
[[bin]]
name = "Clome"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { version = "1.0.7", features = ["build"] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33.1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
surrealdb = { version = "2", default-features = false, features = ["kv-surrealkv", "protocol-ws"] }
chrono = { version = "0.4", features = ["serde"] }
iana-time-zone = "0.1"
once_cell = "1"
# fastembed: pure-Rust local text embeddings via ONNX. Default model
# BAAI/bge-small-en-v1.5 is 384-dim, ~33MB, ~80ms/embed on M1. No
# external server required — runs in-process via ort. Powers the
# semantic half of the hybrid @-mention oracle (BM25 + cosine).
fastembed = "4"
# rusqlite: read-only access to ~/Library/Mail/V*/MailData/Envelope
# Index (Mail.app's metadata store) for the in-app mail viewer. Uses
# system libsqlite3 (no bundled build) — Mail.app and macOS share it.
rusqlite = { version = "0.32", features = ["chrono"] }
# mailparse: RFC822 / .emlx body extraction. Tiny, no_std-friendly.
# Used by the legacy Mail.app reader (src/mail/legacy.rs); will be
# dropped together with that module at Phase 7 cutover.
mailparse = "0.16"
# walkdir: traverse mailbox dirs to locate .emlx by ROWID. Same fate
# as mailparse — legacy-only.
walkdir = "2"

# ── Native mail client (Phase 1+) ────────────────────────────────
# Sync IMAP4rev1 client. We run all calls inside spawn_blocking so the
# tokio runtime stays unblocked. The 2.x line is stable; 3.0 has been
# in alpha for years. native-tls on macOS routes through
# Security.framework (already a transitive dep via security-framework).
imap = "2.4"
native-tls = "0.2"
base64 = "0.22"
# SMTP send + RFC 5322 builder. tokio1-rustls-tls keeps us on rustls.
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }
# Modern, zero-copy MIME parser. Replaces mailparse for new code; the
# legacy reader keeps mailparse until Phase 7 deletes it.
mail-parser = "0.11"
# RFC 5322 / MIME message construction for outgoing send + draft
# IMAP APPEND. Companion to mail-parser.
mail-builder = "0.4"
# OAuth 2.0 client (auth code + PKCE + refresh). default-features
# disabled to drop reqwest/native-tls; we feed it rustls explicitly.
oauth2 = { version = "5", default-features = false, features = ["reqwest", "rustls-tls"] }
# macOS Keychain bindings (kSecClassGenericPassword for OAuth tokens).
security-framework = "3"
# HTML sanitizer for inbound message bodies (whitelist tags/attrs,
# strip script/style/event handlers, neuter remote loads).
ammonia = "4"
# Markdown → HTML for the composer (markdown source, multipart/alt
# delivery on send).
pulldown-cmark = "0.13"
# Punycode for IDN domains in addresses (e.g. user@münchen.de).
idna = "1"
# DNS SRV resolution for autoconfig (RFC 6186 _imaps._tcp /
# _submission._tcp lookups).
hickory-resolver = "0.26"
# UUIDs for outbox + draft + account ids (and OAuth state nonce).
uuid = { version = "1", features = ["v4", "serde"] }
# SHA-256 for .eml integrity verification (mail::store).
sha2 = "0.10"
